[package]
name = "day_08"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[[bin]]
name = "combined"
path = "src/combined.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
matches = { version = "0.1.10", features = [] }
anyhow = { version = "1.0.75", featusres = [] }
itertools = "0.12.0"
time = { version = "0.3.30", features = [] }
h2 = "0.4.0"
difference = { version = "2.0.0", features = [] }
